# speedreader

./: .gitignore  Makefile  README.md
src/: background.js  detect.js  manifest.json  options.html  options.js  reader.html  reader.js  toolbar.css
wasm/: Cargo.toml
wasm/src/: lib.rs
